fixed alignments

--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,6 @@
     margin: 2em; 
 }
 .skills img{
-    height: 15rem;
+    height: 20rem;
     margin: 1em;
 }
